--- a/DM553/Slides/main.tex
+++ b/DM553/Slides/main.tex
@@ -1,3 +1,94 @@
+%% Hey gutter! Jeg håber I er færdige nu, ellers venter I bare med at svare til i er :heart:
+%%
+%% I forhold til oplæsning er følgende min plan:
+%% Jeg præsenterer alle emnerne, så I ikke behøver lave andet end at læse op. Hvis nogen har lyst til at præsentere må de selvfølgelig også det, men jeg har ingen andre kurser, så det er absolut oplagt for mig at gøre det. Hvis I gerne vil, men ikke har tid til at lave slides, kan I bare bruge mine. Jeg skal bare lige give jer adgang til mine noter på github. Jeg skal nok få lavet nogle gode kahoots til dem alle den her gang ;)
+%% 17. Maj:
+%%    Spørgsmål 1
+%% Pensum:
+%% * (Sipser 1.1-1.3)
+%% * Sipser 1.4: \textbf{Non-regular Languages}
+%% * Sipser 2.3: \textbf{Non-context-free Languages}
+%% * Weekly Note 1
+%% * Video 1
+%% * Video 2
+%%
+%% 19. Maj:
+%%    Spørgsmål 2
+%% Pensum:
+%% * Sipser 2.1-2.2: \textbf{Pushdown Automata and Context-free Languages}
+%% * Weekly Note 2
+%% * Video 3-6
+%%
+%% 21. Maj:
+%%    Spørgsmål 3
+%% Pensum:
+%% * Sipser 3: \textbf{Turing Machines}
+%% * Weekly Note 3
+%% * Weekly Note 4
+%% * Video 7-10
+%%
+%% 23. Maj:
+%%    Spørgsmål 4
+%% Pensum:
+%% * Sipser 4: \textbf{Afgørlighed} (Undtagen Sætning 4.17)
+%% * Siper 5.1 pp. 215-220 + 5.3: \textbf{Reducérbarhed}
+%% * Weekly Note 5
+%% * Weekly Note 6
+%% * Video 11-14
+%%
+%% 25. Maj:
+%%    Spørgsmål 5
+%% Pensum:
+%% * Siper 7.1-7.4: \textbf{Tidskompleksitet inkl. P, NP, NP-komplethed}
+%% * CLRS 34: \textbf{NP-Komplethed Beviser} (minus sider 1070-1078)
+%% * Weekly Note 7
+%% * Weekly Note 8
+%% * Weekly Note 9 (ish)
+%% * Video 15-17
+%%
+%% 27. Maj:
+%%    Spørgsmål 6
+%% Pensum:
+%% * Sipser 7.4: \textbf{Bevis at CNF-SAT er NP-Komplet}
+%% * Weekly Note 9
+%% * Video 18 (Bonus \href{https://www.youtube.com/watch?v=6Az1gtDRaAU}{video})
+%%
+%% 29. Maj:
+%%    Spørgsmål 7
+%% Pensum:
+%% * CLRS 35: \textbf{Approximationsalgoritmer}
+%% * Weekly Note 10 (igen)
+%% * Video 19-21
+%%
+%% 31. Maj:
+%%    Spørgsmål 8
+%% Pensum:
+%% * Baase 2.4: \textbf{Informationsteoretiske nedre grænser for sortering ved sammenligninger}
+%% * Jørgens noter: \textbf{Noter på nedre grænser}
+%% * CLRS 9.3: \textbf{Median Problem}
+%% * Weekly Note 11
+%% * Video 22-24
+%%
+%% 2. Juni:
+%%    Spørgsmål 9
+%% Pensum:
+%% * Baase 3: \textbf{Adversary nedre grænse argumenter}
+%% * Baase 3.5: \textbf{Adversary Median Problem}
+%% * Jørgens noter: \textbf{Noter på nedre grænser}
+%% * Weekly Note 12
+%% * Video 24-25
+%%
+%% 4. Juni:
+%%    Spørgsmål 10
+%% Pensum:
+%% * Cygan et al pp. 3-8, 12-14, 17--22, 51-55: \textbf{Algoritmer med faste parametre}.
+%% * F.V. Fomin, D. Kratsch pp. 1-6: \textbf{Eksakte Algoritmer}.
+%% * Weekly Note 13
+%% * Video 26
+%%
+%% 5-12 juni: (8 dage inkl.)
+%% Se på de svage led, øvepræsentationer, muligvis opgaver
+
 \input{preamble.tex}
 
 \begin{frame}[allowframebreaks]
@@ -6,7 +97,7 @@
 
 
 \begin{frame}[allowframebreaks]
-  \frametitle{Indholdsfortegnelse}
+	\frametitle{Indholdsfortegnelse}
 	\tableofcontents
 \end{frame}
 
