--- a/DM553/Tidskompleksitet.tex
+++ b/DM553/Tidskompleksitet.tex
@@ -790,6 +790,8 @@ Hamiltonsk Cyklus er NP-komplet.
 \subsection{Cook-Levin Teoremet}%
 \label{subsec:cooklevin}
 
+%%% MANGLER: Heldigv is ikke så slemt som jeg havde regnet med.
+
 
 
 
