--- a/preamble.tex
+++ b/preamble.tex
@@ -69,8 +69,9 @@
 % Til at customize titler
 \usepackage{titlesec}
 
-
-
+% Til algoritmer
+\usepackage{algorithm}
+\usepackage{algorithmic}
 
 % Colors
 \definecolor{DeepSeaBlue}{HTML}{264653}
